--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-	<title>index</title>
+	<title>Queseria la Yebeana</title>
 </head>
 <frameset rows="125,*" border="0">
 	<frame id ="frmsuperior" name="frmsuperior" src="Encabezado1.html" />
